started testing the core, settled on interface for containers

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,13 +1,22 @@
-SOURCES		:=  $(wildcard *.cpp)
-TESTS := $(SOURCES:.cpp=.test)
+SOURCES	:= $(wildcard *.cpp)
+OBJECTS := $(SOURCES:.cpp=.o)
+GTEST := ../../googletest
+INCLUDE_PATH := -I$(GTEST)/include -I../
+LIBRARY_PATH := -L$(GTEST) -L../
 
-all: $(TESTS) test
+all: test_stdcore
 
-test: $(TESTS)
-	 $(foreach var,$(TESTS),./$(var);)
+test: test_stdcore
+	./test_stdcore
 
-%.test: %.cpp 
-	$(CXX) -I../../googletest/include -I../ -L../ -L../../googletest -pthread $< -lstdcore -lgtest ../../googletest/src/gtest_main.cc -o $@
-
+test_stdcore: $(OBJECTS) gtest_main.o
+	$(CXX) $(LIBRARY_PATH) $(OBJECTS) gtest_main.o -pthread -lstdcore -lgtest -o test_stdcore
+	
+%.o: %.cpp 
+	$(CXX) $(INCLUDE_PATH) $< -c -g -o $@
+	
+gtest_main.o: $(GTEST)/src/gtest_main.cc
+	$(CXX) $(INCLUDE_PATH) $< -c -g -o $@
+	
 clean:
 	rm -f *.test
