--- a/.cproject
+++ b/.cproject
@@ -141,7 +141,7 @@
 					<folderInfo id="cdt.managedbuild.toolchain.gnu.base.192125534.1182239304." name="/" resourcePath="">
 						<toolChain id="cdt.managedbuild.toolchain.gnu.base.12276045" name="cdt.managedbuild.toolchain.gnu.base" superClass="cdt.managedbuild.toolchain.gnu.base">
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF" id="cdt.managedbuild.target.gnu.platform.base.1981187779" name="Debug Platform" osList="linux,hpux,aix,qnx" superClass="cdt.managedbuild.target.gnu.platform.base"/>
-							<builder command="make" id="cdt.managedbuild.target.gnu.builder.base.893145084" incrementalBuildTarget="clean" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.base"/>
+							<builder arguments="" command="make" id="cdt.managedbuild.target.gnu.builder.base.893145084" incrementalBuildTarget="clean" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.base"/>
 							<tool id="cdt.managedbuild.tool.gnu.archiver.base.1882706576" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base"/>
 							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.base.713988452" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.base">
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1631737472" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
@@ -181,6 +181,7 @@
 			<resource resourceType="PROJECT" workspacePath="/stdcore"/>
 		</configuration>
 		<configuration configurationName="Library"/>
+		<configuration configurationName="Clean"/>
 		<configuration configurationName="clean">
 			<resource resourceType="PROJECT" workspacePath="/stdcore"/>
 		</configuration>
