--- a/.cproject
+++ b/.cproject
@@ -167,7 +167,7 @@
 		</cconfiguration>
 	</storageModule>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="Core.null.1701548507" name="Core"/>
+		<project id="stdcore.null.1701548507" name="stdcore"/>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
